--- a/g.html
+++ b/g.html
@@ -1,4 +1,4 @@
-Write another version of this make it more beautiful and responsive to all types of screens than this one as well use high standards required internationally to make it professional; <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
