--- a/g.html
+++ b/g.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 <!-- Top Navbar -->
-<nav class="navbar navbar-expand-lg navbar-gray border-bottom sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light border-bottom sticky-top" style="background-color: #f8f9fa;">
     <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;"> <!-- Adjust logo size -->
         <h2 class="mb-0">123 Bank Plc</h2>
@@ -90,7 +90,6 @@
         </ul>
     </div>
 </nav>
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
