--- a/g.html
+++ b/g.html
@@ -181,7 +181,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="sticky-top">
+    <footer class="sticky-bottom">
         <p>Bond Calculator</p>
     </footer>
 
