--- a/g.html
+++ b/g.html
@@ -7,64 +7,81 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom Styling */
-        body {
-            background-color: #f5f7fa;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .calculator-card {
-            background-color: #ffffff;
-            border-radius: 10px;
-            padding: 2rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 1rem;
-        }
-        .form-label {
-            font-weight: 500;
-        }
-        .btn-primary {
-            background-color: #000;
-            border-color: #000;
-            transition: background-color 0.3s ease-in-out;
-        }
-        .btn-primary:hover {
-            background-color: #333;
-        }
-        .btn-outline-primary {
-            border-color: #000;
-            color: #000;
-        }
-        .btn-outline-primary:hover {
-            background-color: #000;
-            color: #fff;
-        }
-        .navbar {
-            padding: 1rem 1.5rem; /* Add padding for better spacing */
-        }
-        .nav-link {
-            font-size: 1.1rem; /* Increase font size */
-            transition: color 0.3s; /* Smooth transition for hover effect */
-        }
-        .nav-link:hover {
-            color: #007bff; /* Change color on hover */
-        }
-        .navbar-brand h2 {
-            font-size: 1.5rem; /* Adjust brand font size */
-            margin: 0; /* Remove bottom margin */
-        }
-        footer {
-            margin-top: 2rem;
-            padding: 1rem;
-            background-color: #f8f9fa;
-            text-align: center;
-            font-size: 0.9rem;
-            color: #6c757d;
-        }
-        /* Centering the title */
-        .calculator-card h2 {
-            text-align: center; /* Center the title */
-        }
-    </style>
+    /* Custom Styling */
+    body {
+        background-color: #f5f7fa;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .calculator-card {
+        background-color: #ffffff;
+        border-radius: 10px;
+        padding: 2rem;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 1rem;
+    }
+    .form-label {
+        font-weight: 500;
+    }
+    .btn-primary {
+        background-color: #000;
+        border-color: #000;
+        transition: background-color 0.3s ease-in-out;
+    }
+    .btn-primary:hover {
+        background-color: #333;
+    }
+    .btn-outline-primary {
+        border-color: #000;
+        color: #000;
+    }
+    .btn-outline-primary:hover {
+        background-color: #000;
+        color: #fff;
+    }
+    .navbar {
+        padding: 1rem 1.5rem; /* Add padding for better spacing */
+        background-color: #f8f9fa; /* Light gray background */
+    }
+    .nav-link {
+        font-size: 1.1rem; /* Increase font size */
+        transition: color 0.3s; /* Smooth transition for hover effect */
+    }
+    .nav-link:hover {
+        color: #007bff; /* Change color on hover */
+    }
+    .navbar-brand h2 {
+        font-size: 1.5rem; /* Adjust brand font size */
+        margin: 0; /* Remove bottom margin */
+    }
+    footer {
+        margin-top: 2rem;
+        padding: 1rem;
+        background-color: #f8f9fa;
+        text-align: center;
+        font-size: 0.9rem;
+        color: #6c757d;
+    }
+    /* Centering the title */
+    .calculator-card h2 {
+        text-align: center; /* Center the title */
+    }
+
+    /* Custom Toggler Styles */
+    .navbar-toggler {
+        border: none; /* Remove border */
+    }
+
+    .navbar-toggler-icon {
+        background-image: none; /* Remove default icon */
+    }
+
+    /* Create a custom icon for the toggler */
+    .navbar-toggler::after {
+        content: "☰"; /* Unicode character for hamburger icon */
+        font-size: 24px; /* Adjust size as needed */
+        color: #000; /* Icon color */
+    }
+</style>
 </head>
 <body>
 <!-- Top Navbar -->
