--- a/g.html
+++ b/g.html
@@ -7,87 +7,67 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-    /* Custom Styling */
-    body {
-        background-color: #f5f7fa;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .calculator-card {
-        background-color: #ffffff;
-        border-radius: 10px;
-        padding: 2rem;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        margin-top: 1rem;
-    }
-    .form-label {
-        font-weight: 500;
-    }
-    .btn-primary {
-        background-color: #000;
-        border-color: #000;
-        transition: background-color 0.3s ease-in-out;
-    }
-    .btn-primary:hover {
-        background-color: #333;
-    }
-    .btn-outline-primary {
-        border-color: #000;
-        color: #000;
-    }
-    .btn-outline-primary:hover {
-        background-color: #000;
-        color: #fff;
-    }
-    .navbar {
-        padding: 1rem 1.5rem; /* Add padding for better spacing */
-        background-color: #f8f9fa; /* Light gray background */
-    }
-    .nav-link {
-        font-size: 1.1rem; /* Increase font size */
-        transition: color 0.3s; /* Smooth transition for hover effect */
-    }
-    .nav-link:hover {
-        color: #007bff; /* Change color on hover */
-    }
-    .navbar-brand h2 {
-        font-size: 1.5rem; /* Adjust brand font size */
-        margin: 0; /* Remove bottom margin */
-    }
-    footer {
-        margin-top: 2rem;
-        padding: 1rem;
-        background-color: #f8f9fa;
-        text-align: center;
-        font-size: 0.9rem;
-        color: #6c757d;
-    }
-    /* Centering the title */
-    .calculator-card h2 {
-        text-align: center; /* Center the title */
-    }
-
-    /* Custom Toggler Styles */
+    /* Additional Hamburger Icon Animation Styles */
     .navbar-toggler {
         border: none; /* Remove border */
+        outline: none; /* Remove outline */
     }
 
     .navbar-toggler-icon {
         background-image: none; /* Remove default icon */
     }
 
-    /* Create a custom icon for the toggler */
-    .navbar-toggler::after {
-        content: "☰"; /* Unicode character for hamburger icon */
-        font-size: 24px; /* Adjust size as needed */
-        color: #000; /* Icon color */
+    .navbar-toggler.collapsed .navbar-toggler-icon::before,
+    .navbar-toggler.collapsed .navbar-toggler-icon::after {
+        content: ""; /* Keep the lines hidden when collapsed */
+    }
+
+    .navbar-toggler.collapsed .navbar-toggler-icon {
+        display: block;
+        position: relative;
+        width: 30px; /* Adjust width as needed */
+        height: 3px; /* Line height */
+        background-color: #000; /* Line color */
+        transition: all 0.3s ease; /* Smooth transition */
+    }
+
+    .navbar-toggler.collapsed .navbar-toggler-icon::before,
+    .navbar-toggler.collapsed .navbar-toggler-icon::after {
+        content: "";
+        position: absolute;
+        width: 30px; /* Width of the lines */
+        height: 3px; /* Line height */
+        background-color: #000; /* Line color */
+        transition: all 0.3s ease; /* Smooth transition */
+    }
+
+    .navbar-toggler.collapsed .navbar-toggler-icon::before {
+        top: -10px; /* Position first line */
+    }
+
+    .navbar-toggler.collapsed .navbar-toggler-icon::after {
+        top: 10px; /* Position second line */
+    }
+
+    .navbar-toggler:not(.collapsed) .navbar-toggler-icon {
+        background: transparent; /* Hide the middle line */
+    }
+
+    .navbar-toggler:not(.collapsed) .navbar-toggler-icon::before {
+        transform: rotate(45deg); /* Rotate the top line */
+        top: 0; /* Align to the center */
+    }
+
+    .navbar-toggler:not(.collapsed) .navbar-toggler-icon::after {
+        transform: rotate(-45deg); /* Rotate the bottom line */
+        top: 0; /* Align to the center */
     }
 </style>
 </head>
 <body>
-<!-- Top Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light border-bottom sticky-top" style="background-color: #f8f9fa;">
+<nav class="navbar navbar-expand-lg navbar-light border-bottom sticky-top">
     <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;"> <!-- Adjust logo size -->
+        <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;">
         <h2 class="mb-0">123 Bank Plc</h2>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -206,68 +186,71 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom Script -->
-    <script>
-        // Form validation
-        (function () {
-            'use strict';
-            const forms = document.querySelectorAll('.needs-validation');
-            
-            Array.prototype.slice.call(forms).forEach(function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (!form.checkValidity()) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-            });
-        })();
+   <script>
+    // Form validation
+    (function () {
+        'use strict';
+        const forms = document.querySelectorAll('.needs-validation');
 
-        // Function to format number with commas
-        function formatNumber(num) {
-            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
-
-        document.getElementById('faceValue').addEventListener('input', function () {
-            // Remove non-digit characters
-            let value = this.value.replace(/[^0-9]/g, '');
-            // Format with commas
-            this.value = formatNumber(value);
+        Array.prototype.slice.call(forms).forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+                if (!form.checkValidity()) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+            }, false);
         });
+    })();
 
-        document.getElementById('bondForm').addEventListener('submit', function (event) {
-            event.preventDefault();
+    // Function to format number with commas
+    function formatNumber(num) {
+        return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    }
 
-            // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
-            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
-            const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
+    document.getElementById('faceValue').addEventListener('input', function () {
+        // Remove non-digit characters
+        let value = this.value.replace(/[^0-9]/g, '');
+        // Format with commas
+        this.value = formatNumber(value);
+    });
 
-            
+    document.getElementById('bondForm').addEventListener('submit', function (event) {
+        event.preventDefault();
 
-            // Calculate annual coupon payment
-            const annualCouponPayment = faceValue * couponRate;
+        // Get form values
+        const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
+        const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
+        const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
+        const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
 
-            // Calculate total interest over the life of the bond
-            const totalInterest = annualCouponPayment * yearsToMaturity;
+        // Calculate annual coupon payment
+        const annualCouponPayment = faceValue * couponRate;
 
-            // Total Bond Value (Face Value + Interest Earned)
-            const totalBondValue = faceValue + totalInterest;
+        // Calculate total interest over the life of the bond
+        const totalInterest = annualCouponPayment * yearsToMaturity;
 
-            // Total Future Value assuming reinvestment (basic example)
-            const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
+        // Total Bond Value (Face Value + Interest Earned)
+        const totalBondValue = faceValue + totalInterest;
 
-            // Update modal content
-            document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
-            document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
-            document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
-            document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
+        // Total Future Value assuming reinvestment (basic example)
+        const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
 
-            // Show the modal
-            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
-            resultModal.show();
-        });
-    </script>
+        // Update modal content
+        document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
+        document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
+        document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
+        document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
+
+        // Show the modal
+        const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
+        resultModal.show();
+    });
+
+    // Add event listener to toggle class on navbar-toggler for hamburger menu animation
+    document.querySelector('.navbar-toggler').addEventListener('click', function () {
+        this.classList.toggle('collapsed');
+    });
+</script>
 </body>
 </html>
