--- a/g.html
+++ b/g.html
@@ -71,6 +71,41 @@
         /* Hide square border around the toggler */
         .navbar-toggler {
             border: none;
+            outline: none;
+        }
+        /* Hamburger to X animation */
+        .navbar-toggler-icon {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            position: relative;
+            transition: all 0.3s ease-in-out;
+        }
+        .navbar-toggler-icon::before,
+        .navbar-toggler-icon::after {
+            content: '';
+            position: absolute;
+            width: 24px;
+            height: 2px;
+            background-color: #000;
+            transition: all 0.3s ease-in-out;
+        }
+        .navbar-toggler-icon::before {
+            top: 6px;
+        }
+        .navbar-toggler-icon::after {
+            bottom: 6px;
+        }
+        .navbar-toggler.active .navbar-toggler-icon::before {
+            transform: rotate(45deg);
+            top: 12px;
+        }
+        .navbar-toggler.active .navbar-toggler-icon::after {
+            transform: rotate(-45deg);
+            bottom: 12px;
+        }
+        .navbar-toggler.active .navbar-toggler-icon {
+            background-color: transparent;
         }
     </style>
 </head>
@@ -182,22 +217,12 @@
                         <div class="col-6 text-end"><p id="totalFutureValue"></p></div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>Bond Calculator</p>
-    </footer>
-
-    <!-- Bootstrap 5 JS and dependencies -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom Script -->
     <script>
         // Form validation
         (function () {
@@ -220,9 +245,7 @@
             return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
 
-        document.getElementById('faceValue').addEventListener('input',
-
- function () {
+        document.getElementById('faceValue').addEventListener('input', function () {
             // Remove non-digit characters
             let value = this.value.replace(/[^0-9]/g, '');
             // Format with commas
@@ -259,6 +282,12 @@
             // Show the modal
             const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
             resultModal.show();
+        });
+
+        // Hamburger menu toggle animation
+        const toggler = document.querySelector('.navbar-toggler');
+        toggler.addEventListener('click', function () {
+            this.classList.toggle('active');
         });
     </script>
 </body>
