--- a/g.html
+++ b/g.html
@@ -224,8 +224,8 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js">
+</script>
         // Form validation
         (function () {
             'use strict';
@@ -286,6 +286,7 @@
             resultModal.show();
         });
 
+        
         // Hamburger menu toggle animation
         const toggler = document.querySelector('.navbar-toggler');
         toggler.addEventListener('click', function () {
